fix: added bottom padding for mobile devices if address bar was on the bottom, it covered up the content

--- a/tabs.css
+++ b/tabs.css
@@ -56,6 +56,12 @@
   }
 }
 
+@media (pointer: coarse) {
+  .tab-body {
+    margin-bottom: 64px;
+  }
+}
+
 @media print {
   #tab-bar {
     display: none;
